# highlight-specific-text-inside-the-PDF

./: .gitignore  Makefile  Pipfile  README.md  highlight textual values in PDF.ipynb  pyproject.toml  requirements.txt  utils.py
examples/: basic_usage.py
src/pdfmark/: __init__.py  annotator.py  cli.py  models.py  search.py
tests/: conftest.py  test_annotator.py  test_search.py  test_utils 2.py  test_utils.py
