[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfmark"
version = "1.0.0"
description = "Search and annotate text inside PDF files with highlights, redactions, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Babandeep Singh"}]
keywords = ["pdf", "highlight", "redact", "annotation", "pymupdf", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing",
]
dependencies = [
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "build>=1.0.0",
]

[project.scripts]
pdfmark = "pdfmark.cli:main"

[project.urls]
Homepage = "https://github.com/baban9/highlight-specific-text-inside-the-PDF"
Repository = "https://github.com/baban9/highlight-specific-text-inside-the-PDF"
Issues = "https://github.com/baban9/highlight-specific-text-inside-the-PDF/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
